--- a/_config.yml
+++ b/_config.yml
@@ -18,19 +18,19 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Game Dev Toby
+email: dynamo.prologue@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  An awesome site to see all the things which Toby has worked on,
+  namely Undertinge, Ciarlan's Quest, Box Poy and other projects.
+  Also to view pixel art made by Toby.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: TobyDog7
+github_username:  TobyDog77
 
 # Build settings
-theme: minima
+theme: merlot
 plugins:
   - jekyll-feed
 
