--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,16 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Game Dev Toby
-email: dynamo.prologue@gmail.com
+title: Your awesome title
+email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  An awesome site to see all the things which Toby has worked on,
-  namely Undertinge, Ciarlan's Quest, Box Poy and other projects.
-  Also to view pixel art made by Toby.
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: TobyDog7
-github_username:  TobyDog77
+twitter_username: jekyllrb
+github_username:  jekyll
 
 # Build settings
 theme: minima
