--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,15 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Game Dev TobyDog7
+email: dynamos.prologue@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A portfolio site to see what TobyDog7 is currently working on,
+  or has worked on in the past.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://tobydog7gamedev.com" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: toby_dog7
+github_username:  TobyDog77
 
 # Build settings
 theme: minima
