Fortyone theme added
Still trying to learn how it works but it's a great layout for Game dev

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ twitter_username: toby_dog7
 github_username:  TobyDog77
 
 # Build settings
-theme: minima
+theme: fortyone-jekyll-theme
 plugins:
   - jekyll-feed
 
