--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: TobyDog7
 subtitle: Game Dev
-email: f/xnngvvvp
+email: dynamos.prologue@gmail.com
 description: A portfolio site to see what TobyDog7 is currently working on, <br /> or has worked on in the past.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://tobydog7gamedev.com" # the base hostname & protocol for your site, e.g. http://example.com
